--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "altorouter/altorouter": "^2.0",
+        "respect/validation": "^2.0",
         "microsoft/microsoft-graph": "^1.13",
         "league/oauth2-client": "^2.4"
     }
