--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
         "altorouter/altorouter": "^2.0",
         "respect/validation": "^2.0",
         "microsoft/microsoft-graph": "^1.13",
-        "league/oauth2-client": "^2.4"
+        "league/oauth2-client": "^2.4",
+        "slim/slim": "4.*",
+        "slim/psr7": "^1.2",
+        "slim/twig-view": "^3.1",
+        "php-di/slim-bridge": "^3.0",
+        "dflydev/fig-cookies": "^2.0"
     }
 }
